src/objects/BGCK__Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Actual_Value2__c</fullName>
        <label>Actual Value</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BGCK__Actual_Value__c</fullName>
        <description>DO NOT USE</description>
        <label>Actual Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Comments__c</fullName>
        <label>Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGCK__Contest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contest</label>
        <referenceTo>BGCK__Contest__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Page_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Question</label>
        <referenceTo>BGCK__Page_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>IF(   ISBLANK(BGCK__Page_Question__r.BGCK__Parent_Page_Question__c),BGCK__Page_Question__r.BGCK__Order__c,  BGCK__Page_Question__r.BGCK__Parent_Page_Question__r.BGCK__Order__c + BGCK__Page_Question__r.BGCK__Order__c /10  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Section__c</fullName>
        <formula>Question__r.Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <label>Response</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>